<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="trigger_lux_array" translatable="false">
        <item>0</item>
        <item>2</item>
        <item>10</item>
        <item>50</item>
    </string-array>
    <string-array name="light_light_time_list">
        <item>10s</item>
        <item>20s</item>
        <item>30s</item>
        <item>40s</item>
        <item>50s</item>
        <item>1min</item>
        <item>2min</item>
        <item>3min</item>
        <item>4min</item>
        <item>5min</item>
    </string-array>
    <string-array name="startup_mode">
        <item>Turn on</item>
        <item>Turn off</item>
    </string-array>
    <string name="switch_mode">Light-open mode</string>
    <string name="delay_unit">Delay-time unit</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="me">Me</string>
    <string name="confirm">Confirm</string>
    <string name="factory_reset">Factory reset</string>
    <string name="btn_rename_light">Rename</string>
    <string name="search">Search</string>
    <string name="complete">Done</string>
    <string name="not_found_switch">No switch found</string>
    <string name="searching">Searching…</string>
    <string name="connected">Connected</string>
    <string name="scene_name">Scenes</string>
    <string name="question_1">2. How to reset my lights?</string>
    <string name="question_1_anser1">(1) uled app reset: This method will directly reset the lights to the factory settings through the App. Please ensure that the lights are connected.</string>
    <string name="qustion_2_anser2">(2)Light: Connect to power supply for 6 second, disconnect to power supply for 6s, repeat about 5-6 times until the light flashes.
        Switch: Connect to power supply and simultaneously press the upper left button and the lower right button of the 4 buttons. The led  will blink.
        Sensor: Connect to power supply for 3 second, disconnect to power supply for 3 second, repeat about 5-6 times until the sensor flashes.</string>
    <string name="update_group">Edit Group</string>
    <string name="btn_jump_over">Skip </string>
    <string name="firmware_version">Firmware version: </string>
    <string name="ota">OTA</string>
    <string name="group_title">Group </string>
    <string name="group_list_on"> ON </string>
    <string name="group_list_off">OFF</string>
    <string name="light_light_tip">Please switch the night light to the configuration mode first.</string>
    <string name="device">Device </string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="pause">pause</string>
    <string name="commutation">Motor commutator</string>
    <string name="hand_recovery">Hand recovery</string>
    <string name="software_restart">Device restart</string>
    <string name="slow_up_the_cache">Slow up the cache</string>
    <string name="online_upgrade">OTA</string>
    <string name="relocation">Afresh set</string>
    <string name="chose_time">Chose time</string>
    <string name="to">To</string>
    <string name="startTime">7:40</string>
    <string name="endTime">8:00</string>
    <string name="standing_time">Standing time</string>
    <string name="wifi_account">WIFI Account</string>
    <string name="wifi_pwd">WIFI Password</string>
    <string name="wifi_account_hinit">Please enter WIFI account</string>
    <string name="wifi_pwd_hinit">Please enter WIFI password</string>
    <string name="config_net">Configure the network</string>
    <string name="delete_device">Delete Device</string>
    <string name="delete_group">Delete Group</string>
    <string name="please_check_device_code">Please check the equipment code:</string>
</resources>