<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".light.ScanningLightlightActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHint1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/light_light_tip"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.8" />


    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/progressBtn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/search"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.627"
        app:pb_colorComplete="@color/green_complete"
        app:pb_colorError="@color/red_error"
        app:pb_colorNormal="@color/primary"
        app:pb_colorPressed="@android:color/holo_blue_dark"
        app:pb_colorProgress="@color/primary"
        app:pb_textComplete="@string/connected"
        app:pb_textError="@string/not_found_switch"
        app:pb_textProgress="@string/searching" />



</android.support.constraint.ConstraintLayout>