<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

    <include layout="@layout/template_top_three" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="85dp"
                android:text="@string/startTime"
                android:textSize="30sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:text="@string/to"
                android:textColor="@color/gray9"
                android:textSize="20sp" />

        <EditText
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="85dp"
                android:text="@string/endTime"
                android:textSize="30sp" />

    </LinearLayout>

    <include layout="@layout/template_wheel_container" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="@dimen/dp_15"
                android:paddingEnd="@dimen/dp_5"
                android:text="@string/standing_time"
                android:textColor="@color/gray_3"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/gw_times_standing_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/chose_time"
                android:textColor="@color/gray_6"
                android:textSize="@dimen/sp_15" />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/dp_11"
                android:paddingEnd="@dimen/dp_15"
                android:src="@drawable/arrow_r" />
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/gray_e" />

    <include layout="@layout/item_gata_way_event_timer" />
</LinearLayout>