<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="26dp"
            android:gravity="center"
            android:text="@string/please_check_device_code"
            android:textColor="@color/black_three"
            android:textSize="19sp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/routing_device_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:paddingStart="@dimen/dp_10"
                android:maxLength="12"
                android:singleLine="true"
                android:inputType="text"
                android:digits="@string/filter_vcode"
                android:background="@drawable/rect_black_n_3"
                android:layout_weight="1" />

        <Button
                android:id="@+id/routing_confim"
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp_18"
                android:layout_marginStart="@dimen/dp_18"
                android:text="@string/confirm" />
    </LinearLayout>
</LinearLayout>